tests/binding/pass/shadowing_different_scope.crs
var a : i32 = 2;

fn main() {
    var a : i32 = 3;
}