tests/binding/fail/shadowing_same_scope.crs
fn test() {
    var a : i16 = 2;
    const a : i16 = 3;
}